--- a/cmd/tt/mosquitto.conf
+++ b/cmd/tt/mosquitto.conf
@@ -1,10 +1,14 @@
 user mosquitto
-allow_anonymous true
 allow_duplicate_messages true
 connection_messages true
 log_dest stderr
 log_timestamp false
 log_type all
 persistence false
+per_listener_settings true
 
-port 1883
+listener 1883
+allow_anonymous true
+
+listener 2883
+password_file /mosquitto/config/passwd
