--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         go-version: 1.19
 
     - name: Compile
-      run: go build ./cmd/tt
+      run: go build ./cmd/tt /usr/bin/tt
 
     - name: Test
       run: go test -v ./...
