--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: go run ci.go build
+      run: go run ci.go setup build
 
     - name: Test
-      run: go run ci.go setup test | gocolor
+      run: go run ci.go test | gocolor
