--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,8 +18,11 @@ jobs:
       with:
         go-version: '1.23'
 
-    - name: Build
-      run: go run ci.go setup build
+    - name: Set up tools
+      run: go run ci.go setup
+
+    - name: Install tt
+      run: go run ci.go install
 
     - name: Test
       run: go run ci.go test | gocolor
